tenshi.css
/* ... */
#loading .loader{
	margin-right: 5px;
	vertical-align: top;
}

.loader{
	display: inline-block;
	width: 16px;
	height: 16px;
	background: transparent url(loader-sprite.png) no-repeat;
	-webkit-animation: 'loading-sprite' 1s linear infinite;
}
@-webkit-keyframes 'loading-sprite' {
	0% { background-position: 0 0; }
	8.32% { background-position: 0 0; }
	8.33% { background-position: -16px 0; }
	16.66% { background-position: -16px 0; }
	16.67% { background-position: -32px 0; }
	24.99% { background-position: -32px 0; }
	25% { background-position: -48px 0; }
	33.32% { background-position: -48px 0; }
	33.33% { background-position: -64px 0; }
	41.66% { background-position: -64px 0; }
	41.67% { background-position: -80px 0; }
	49.99% { background-position: -80px 0; }
	50% { background-position: -96px 0; }
	58.32% { background-position: -96px 0; }
	58.33% { background-position: -112px 0; }
	66.66% { background-position: -112px 0; }
	66.67% { background-position: -128px 0; }
	74.99% { background-position: -128px 0; }
	75% { background-position: -144px 0; }
	83.32% { background-position: -144px 0; }
	83.33% { background-position: -160px 0; }
	91.66% { background-position: -160px 0; }
	91.67% { background-position: -176px 0; }
	99.99% { background-position: -176px 0; }
	100% { background-position: -192px 0; }
}

/* Transitions from jQtouch (with small modifications): http://www.jqtouch.com/
Built by David Kaneda and maintained by Jonathan Stark.
*/
.in, .out {
	-webkit-animation-timing-function: ease-in-out;
	-webkit-animation-duration: 350ms;
}

.slide.in {
	-webkit-transform: translateX(0);
	-webkit-animation-name: slideinfromright;
}

.slide.out {
	-webkit-transform: translateX(-100%);
	-webkit-animation-name: slideouttoleft;
}

.slide.in.reverse {
	-webkit-transform: translateX(0);
	-webkit-animation-name: slideinfromleft;
}

.slide.out.reverse {
	-webkit-transform: translateX(100%);
	-webkit-animation-name: slideouttoright;
}

.slideup.in {
	-webkit-transform: translateY(0);
	-webkit-animation-name: slideinfrombottom;
	z-index: 10;
}

.slideup.out {
	-webkit-animation-name: dontmove;
	z-index: 0;
}

.slideup.out.reverse {
	-webkit-transform: translateY(100%);
	z-index: 10;
	-webkit-animation-name: slideouttobottom;
}

.slideup.in.reverse {
	z-index: 0;
	-webkit-animation-name: dontmove;
}
.slidedown.in {
	-webkit-transform: translateY(0);
	-webkit-animation-name: slideinfromtop;
	z-index: 10;
}

.slidedown.out {
	-webkit-animation-name: dontmove;
	z-index: 0;
}

.slidedown.out.reverse {
	-webkit-transform: translateY(-100%);
	z-index: 10;
	-webkit-animation-name: slideouttotop;
}

.slidedown.in.reverse {
	z-index: 0;
	-webkit-animation-name: dontmove;
}

@-webkit-keyframes slideinfromright {
    from { -webkit-transform: translateX(100%); }
    to { -webkit-transform: translateX(0); }
}

@-webkit-keyframes slideinfromleft {
    from { -webkit-transform: translateX(-100%); }
    to { -webkit-transform: translateX(0); }
}

@-webkit-keyframes slideouttoleft {
    from { -webkit-transform: translateX(0); }
    to { -webkit-transform: translateX(-100%); }
}

@-webkit-keyframes slideouttoright {
    from { -webkit-transform: translateX(0); }
    to { -webkit-transform: translateX(100%); }
}


@-webkit-keyframes slideinfromtop {
    from { -webkit-transform: translateY(-100%); }
    to { -webkit-transform: translateY(0); }
}

@-webkit-keyframes slideinfrombottom {
    from { -webkit-transform: translateY(100%); }
    to { -webkit-transform: translateY(0); }
}

@-webkit-keyframes slideouttobottom {
    from { -webkit-transform: translateY(0); }
    to { -webkit-transform: translateY(100%); }
}

@-webkit-keyframes slideouttotop {
    from { -webkit-transform: translateY(0); }
    to { -webkit-transform: translateY(-100%); }
}
@-webkit-keyframes fadein {
    from { opacity: 0; }
    to { opacity: 1; }
}

@-webkit-keyframes fadeout {
    from { opacity: 1; }
    to { opacity: 0; }
}

.fade.in {
	opacity: 1;
	z-index: 10;
	-webkit-animation-name: fadein;
}
.fade.out {
	z-index: 0;
	-webkit-animation-name: fadeout;
}

@media only screen and (max-height: 300px){
	header{
		line-height: 32px;
		height: 32px;
	}
	header h1{
		font-size: 16px;
	}
	.header-button{
		top: 4px;
		height: 23px;
		line-height: 23px;
		font-size: 11px;
	}
	#image>div{
		padding-top: 34px;
	}
	#close-image{
		line-height: 22px;
		height: 22px;
		top: 4px;
	}
	.scroll{
		top: 34px;
	}
}

